--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.21.5",
+    "@nutui/nutui-react-taro": "^2.6.8",
     "@tarojs/components": "3.6.31",
     "@tarojs/helper": "3.6.31",
     "@tarojs/plugin-framework-react": "3.6.31",
+    "@tarojs/plugin-html": "3.6.31",
     "@tarojs/plugin-platform-alipay": "3.6.31",
     "@tarojs/plugin-platform-h5": "3.6.31",
     "@tarojs/plugin-platform-harmony-hybrid": "3.6.31",
@@ -55,9 +57,9 @@
     "@tarojs/runtime": "3.6.31",
     "@tarojs/shared": "3.6.31",
     "@tarojs/taro": "3.6.31",
+    "classnames": "^2.5.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "taro-ui": "^3.3.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
