--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.21.5",
-    "@nutui/nutui-react-taro": "^2.6.8",
     "@tarojs/components": "3.6.31",
     "@tarojs/helper": "3.6.31",
     "@tarojs/plugin-framework-react": "3.6.31",
@@ -59,7 +58,8 @@
     "@tarojs/taro": "3.6.31",
     "classnames": "^2.5.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "@nutui/nutui-react-taro": "^2.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
