--- a/project.config.json
+++ b/project.config.json
@@ -5,8 +5,8 @@
   "appid": "wx2dc688f39dafa8cd",
   "setting": {
     "urlCheck": true,
-    "es6": false,
-    "enhance": false,
+    "es6": true,
+    "enhance": true,
     "compileHotReLoad": false,
     "postcss": false,
     "minified": false,
